자판기 미션

--- a/whilemission.ipynb
+++ b/whilemission.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN63Le8LoaMnbyFzpuz5XN1",
+      "authorship_tag": "ABX9TyOR7Wn7UsefkgvybWO5V57O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "T-NRKeXaQktS"
       },
@@ -44,18 +44,19 @@
       "cell_type": "code",
       "source": [
         "# 1. 음료 설정\n",
-        "d = {}        #음료 종류 저장용 딕셔너리\n",
-        "a = True\n",
+        "d = {}        # 음료 종류 저장용 딕셔너리\n",
+        "a = True      # 관리자 모드\n",
+        "b = True      # 영업 모드\n",
+        "c = False     # 마감모드\n",
         "order_d =  {} # 주문내역 초기값\n",
-        "drink_kind = [] #음료 종류 리스트 초기값\n",
         "while a :\n",
-        "    name = input(\"음료의 이름을 입력 해주세요 : \")     # 커피 이름 설정\n",
-        "    price = input(\"음료의 가격을 입력 해주세요 : \")    # 커피 가격 설정\n",
-        "    if price.isdigit() == False:\n",
+        "    drink_name = input(\"음료의 이름을 입력 해주세요 : \")     # 커피 이름 설정\n",
+        "    drink_price = input(\"음료의 가격을 입력 해주세요 : \")    # 커피 가격 설정\n",
+        "    if drink_price.isdigit() == False:\n",
         "        print(\"숫자만 입력해주세요\")\n",
         "        continue\n",
         "    else:\n",
-        "        price = int(price)\n",
+        "        drink_price = int(drink_price)\n",
         "\n",
         "    count = input(\"음료의 개수를 입력 해주세요 : \")    # 커피 개수 설정\n",
         "    if count.isdigit() == False:\n",
@@ -64,7 +65,7 @@
         "    else:\n",
         "        count = int(count)\n",
         "\n",
-        "        d[name] = [price, count]                       # 커피 정보 딕셔너리에 저장\n",
+        "        d[drink_name] = [drink_price, count]                       # 커피 정보 딕셔너리에 저장\n",
         "\n",
         "\n",
         "    add = input(\"음료를 더 추가하시겠습니까? (Y/N) : \")\n",
@@ -86,20 +87,78 @@
         "                print(\"Y또는 N만 입력해주세요\")\n",
         "                continue\n",
         "\n",
-        "for i in d:\n",
-        "    drink_kind.append(i)\n",
         "\n",
         "print(\"===================\")\n",
         "print(\"영업을 시작 합니다.\")\n",
-        "print(\"===================\")\n",
-        "\n",
-        "\n",
+        "print(\"===================\")\n"
+      ],
+      "metadata": {
+        "id": "nKnrOn_0Qv7r",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ebcaea3f-c032-4182-d293-bf3bf3996538"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "음료의 이름을 입력 해주세요 : 아메리카노\n",
+            "음료의 가격을 입력 해주세요 : 1000\n",
+            "음료의 개수를 입력 해주세요 : 100\n",
+            "음료를 더 추가하시겠습니까? (Y/N) : y\n",
+            "음료의 이름을 입력 해주세요 : 라떼\n",
+            "음료의 가격을 입력 해주세요 : 2000\n",
+            "음료의 개수를 입력 해주세요 : 200\n",
+            "음료를 더 추가하시겠습니까? (Y/N) : y\n",
+            "음료의 이름을 입력 해주세요 : 아이스티\n",
+            "음료의 가격을 입력 해주세요 : 3000\n",
+            "음료의 개수를 입력 해주세요 : 300\n",
+            "음료를 더 추가하시겠습니까? (Y/N) : n\n",
+            "===================\n",
+            "영업을 시작 합니다.\n",
+            "===================\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in d:\n",
+        "    print(f'음료명 :{i:^10s}음료가격 :{d[i][0]:^10d}잔여수량 :{d[i][1]:^10d}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hr_qzQx49iPY",
+        "outputId": "b92cd281-18c4-4140-d699-55637ab2d770"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "음료명 :  아메리카노   음료가격 :   1000   잔여수량 :   100    \n",
+            "음료명 :    라떼    음료가격 :   2000   잔여수량 :   200    \n",
+            "음료명 :   아이스티   음료가격 :   3000   잔여수량 :   300    \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 2. 판매\n",
         "\n",
         "\n",
-        "while True:\n",
-        "    for i in drink_kind:\n",
-        "        print(f'')\n",
+        "while b:\n",
+        "    for i in d:\n",
+        "        print(f'음료명 :{i:^10s}음료가격 :{d[i][0]:^10d} 원 잔여수량 :{d[i][1]:^10d} 잔 ')\n",
         "    drink =\"\"\n",
         "    drink = str(input(\"드실 음료를 입력 해주세요 : \"))     # 음료명 지정\n",
         "    if drink in d:\n",
@@ -124,14 +183,159 @@
         "        continue\n",
         "    elif drink_add == 'N'or drink_add == 'n':\n",
         "        break\n",
-        "\n",
-        "\n",
-        "    # 3. 계산\n",
-        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "nKnrOn_0Qv7r"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pckydsgG8mzh",
+        "outputId": "e6b15e5c-44dd-40a6-9f04-6e38efb5e1d7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "음료명 :  아메리카노   음료가격 :   1000   잔여수량 :   100    \n",
+            "음료명 :    라떼    음료가격 :   2000   잔여수량 :   200    \n",
+            "음료명 :   아이스티   음료가격 :   3000   잔여수량 :   300    \n",
+            "드실 음료를 입력 해주세요 : 아메리카노\n",
+            "음료의 개수를 선택 해주세요 : 2\n",
+            "음료를 더 추가하시겠습니까? (Y/N) : n\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(d)\n",
+        "print(order_d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UB_FRird9iyS",
+        "outputId": "94d835ff-b8a1-49cb-b9d6-4fbcf102a927"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'아메리카노': [1000, 98], '라떼': [2000, 200], '아이스티': [3000, 300]}\n",
+            "{'아메리카노': 2}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " # 3. 계산\n",
+        "total=0\n",
+        "for i in order_d:\n",
+        "    print(f'음료명 :{i:^5s} 음료개수 :{order_d[i]:^5d} 잔  가격 : {order_d[i]* d[i][0]:^5d} 원 ')\n",
+        "    total += order_d[i] * d[i][0]\n",
+        "print(f'총 가격 : {total} 원')\n",
+        "pay = (input(\"돈을 넣어주세요 : \"))\n",
+        "if pay.isdigit() == False:\n",
+        "    print(\"숫자만 입력해주세요\")\n",
+        "else:\n",
+        "    pay = int(pay)\n",
+        "    if pay >= total:\n",
+        "        print(f'거스름돈 : {pay - total} 원')\n",
+        "    else:\n",
+        "        print(\"돈이 부족합니다.\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8wdVbb428mxO",
+        "outputId": "388bb23e-a9b7-4893-c8de-b6bba46323dc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "음료명 :아메리카노 음료개수 :  2   잔  가격 : 2000  원 \n",
+            "총 가격 : 2000 원\n",
+            "돈을 넣어주세요 : 400\n",
+            "돈이 부족합니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. 마감\n",
+        "for i in d:\n",
+        "    coffee_count = 0\n",
+        "    coffee_count += d[i][1]\n",
+        "if coffee_count == 0:\n",
+        "    print(\"커피 판매를 종료합니다.\")\n",
+        "    c = True\n",
+        "if c == True:\n",
+        "    total_sales = 0\n",
+        "    for i in order_d:\n",
+        "        total_sales += order_d[i]* d[i][0]\n",
+        "    print(\"\"\"\n",
+        "    ===================\n",
+        "    판매를 종료합니다.\n",
+        "    ===================\n",
+        "    판매 내역\n",
+        "    \"\"\")\n",
+        "    for i in d:\n",
+        "        print(f\"\"\"\n",
+        "        음료명 :{i:^10s}\n",
+        "        음료가격 :{d[i][0]:^10d} 원 수량 :{d[i][1]:^10d} 잔 = {d[i][0]*d[i][1]} 원\n",
+        "        총 판매 금액 : {total_sales} 원\n",
+        "        \"\"\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4z-5fAMF8mn1",
+        "outputId": "4158cb77-aae7-4170-b2a6-10987149bec9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "98\n",
+            "200\n",
+            "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yQdDGfLXR2H_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7t8EBFIGM9S9"
       },
       "execution_count": null,
       "outputs": []
