자판기 미션

--- a/whilemission.ipynb
+++ b/whilemission.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOR7Wn7UsefkgvybWO5V57O",
+      "authorship_tag": "ABX9TyOc9Cvx5w7Arp9dz5Kp/xkE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -238,19 +238,23 @@
       "source": [
         " # 3. 계산\n",
         "total=0\n",
+        "pay_t = 0\n",
         "for i in order_d:\n",
         "    print(f'음료명 :{i:^5s} 음료개수 :{order_d[i]:^5d} 잔  가격 : {order_d[i]* d[i][0]:^5d} 원 ')\n",
         "    total += order_d[i] * d[i][0]\n",
-        "print(f'총 가격 : {total} 원')\n",
-        "pay = (input(\"돈을 넣어주세요 : \"))\n",
-        "if pay.isdigit() == False:\n",
-        "    print(\"숫자만 입력해주세요\")\n",
-        "else:\n",
-        "    pay = int(pay)\n",
-        "    if pay >= total:\n",
-        "        print(f'거스름돈 : {pay - total} 원')\n",
+        "    print(f'총 가격 : {total} 원')\n",
+        "    print(\"===================\")\n",
+        "while pay_t < total:\n",
+        "    pay = (input(\"돈을 넣어주세요 : \"))\n",
+        "    if pay.isdigit() == False:\n",
+        "        print(\"숫자만 입력해주세요\")\n",
         "    else:\n",
-        "        print(\"돈이 부족합니다.\")\n",
+        "        pay = int(pay)\n",
+        "        pay_t += pay\n",
+        "        if pay_t >= total:\n",
+        "            print(f'거스름돈 : {pay_t - total} 원')\n",
+        "        else:\n",
+        "            print(f\"돈이 부족합니다.{total-pay_t}원 만큼 더 지불해주세요\")\n",
         "\n"
       ],
       "metadata": {
@@ -258,9 +262,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8wdVbb428mxO",
-        "outputId": "388bb23e-a9b7-4893-c8de-b6bba46323dc"
+        "outputId": "ccbb7a46-ef56-4992-f3f1-603ac2f59cdc"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -268,8 +272,11 @@
           "text": [
             "음료명 :아메리카노 음료개수 :  2   잔  가격 : 2000  원 \n",
             "총 가격 : 2000 원\n",
-            "돈을 넣어주세요 : 400\n",
-            "돈이 부족합니다.\n"
+            "===================\n",
+            "돈을 넣어주세요 : 1000\n",
+            "돈이 부족합니다.1000원 만큼 더 지불해주세요\n",
+            "돈을 넣어주세요 : 1000\n",
+            "거스름돈 : 0 원\n"
           ]
         }
       ]
@@ -278,6 +285,7 @@
       "cell_type": "code",
       "source": [
         "# 4. 마감\n",
+        "c = True\n",
         "for i in d:\n",
         "    coffee_count = 0\n",
         "    coffee_count += d[i][1]\n",
@@ -298,26 +306,46 @@
         "        print(f\"\"\"\n",
         "        음료명 :{i:^10s}\n",
         "        음료가격 :{d[i][0]:^10d} 원 수량 :{d[i][1]:^10d} 잔 = {d[i][0]*d[i][1]} 원\n",
-        "        총 판매 금액 : {total_sales} 원\n",
+        "\n",
         "        \"\"\")\n",
-        "\n"
+        "\n",
+        "    print(f\"총 판매 금액 : {total_sales} 원\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4z-5fAMF8mn1",
-        "outputId": "4158cb77-aae7-4170-b2a6-10987149bec9"
+        "outputId": "06600146-57c4-4178-f564-a2d8dbbfbc01"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "98\n",
-            "200\n",
-            "300\n"
+            "\n",
+            "    ===================\n",
+            "    판매를 종료합니다.\n",
+            "    ===================\n",
+            "    판매 내역\n",
+            "    \n",
+            "\n",
+            "        음료명 :  아메리카노   \n",
+            "        음료가격 :   1000    원 수량 :    98     잔 = 98000 원\n",
+            "        \n",
+            "        \n",
+            "\n",
+            "        음료명 :    라떼    \n",
+            "        음료가격 :   2000    원 수량 :   200     잔 = 400000 원\n",
+            "        \n",
+            "        \n",
+            "\n",
+            "        음료명 :   아이스티   \n",
+            "        음료가격 :   3000    원 수량 :   300     잔 = 900000 원\n",
+            "        \n",
+            "        \n",
+            "총 판매 금액 : 2000 원\n"
           ]
         }
       ]
